# ComfyUI_Text_Translation

./: LICENSE  LICENSE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
js/: text.js  ulits.js  utils.js
node/: tencent_translation.py
nodes/: text.py
utils/: string.py  translation.py
